--- a/index.html
+++ b/index.html
@@ -3,11 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>OmniFood</title>
   </head>
   <body>
-
+    <section class="hero-section">
+      <div class="hero">
+        <div class="hero-section-txt">
+          <h1 class="heading-primary">
+            A healthy meal delivered to your door, every single day
+          </h1>
+          <p class="hero-section-desc">
+            The smart 365-days-per-year food subscription that will make you eat
+            healthy again. Tailored to your personal tastes and nutritional
+            needs. We have delivered 250,000+ meals last year!
+          </p>
+          <a href="#" class="btn">Start eating well</a>
+          <a href="#" class="btn-secondary">Learn more &darr;</a>
+        </div>
+        <div class="hero-section-img">
+          <img
+            class="hero-section-img"
+            src="img/hero.png"
+            alt="Girl eating healthy, tasty looking food, meals in containrers, and food bowls on the table"
+          />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
- 
