--- a/index.html
+++ b/index.html
@@ -3,32 +3,71 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Rubik:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>OmniFood</title>
   </head>
   <body>
-    <section class="hero-section">
-      <div class="hero">
-        <div class="hero-section-txt">
-          <h1 class="heading-primary">
-            A healthy meal delivered to your door, every single day
-          </h1>
-          <p class="hero-section-desc">
-            The smart 365-days-per-year food subscription that will make you eat
-            healthy again. Tailored to your personal tastes and nutritional
-            needs. We have delivered 250,000+ meals last year!
-          </p>
-          <a href="#" class="btn btn-primary margin-right-sm">Start eating well</a>
-          <a href="#" class="btn btn-secondary">Learn more &darr;</a>
+    <header class="main-header">
+      <img
+        src="img/omnifood-logo.png"
+        alt="OmniFood logo"
+        class="header-logo"
+      />
+      <nav class="main-header-nav">
+        <ul class="main-nav-list">
+          <li><a href="#" class="main-nav-link">Section 1</a></li>
+          <li><a href="#" class="main-nav-link">Section 2</a></li>
+          <li><a href="#" class="main-nav-link">Section 3</a></li>
+          <li><a href="#" class="main-nav-link">Section 4</a></li>
+          <li><a href="#" class="main-nav-link nav-cta">Section 5</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="hero-section">
+        <div class="hero">
+          <div class="hero-section-txt">
+            <h1 class="heading-primary">
+              A healthy meal delivered to your door, every single day
+            </h1>
+            <p class="hero-section-desc">
+              The smart 365-days-per-year food subscription that will make you
+              eat healthy again. Tailored to your personal tastes and
+              nutritional needs. We have delivered 250,000+ meals last year!
+            </p>
+            <a href="#" class="btn btn-primary margin-right-sm"
+              >Start eating well</a
+            >
+            <a href="#" class="btn btn-secondary">Learn more &darr;</a>
+            <div class="delivered-meals">
+              <div class="delivered-img">
+                <img src="img/customers/customer-1.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-2.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-3.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-4.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-5.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-6.jpg" alt="Customer photo" />
+              </div>
+              <p class="delivered-text">
+                <span>250,000+</span> meals last year!
+              </p>
+            </div>
+          </div>
+          <div class="hero-section-img">
+            <img
+              class="hero-section-img"
+              src="img/hero.png"
+              alt="Girl eating healthy, tasty looking food, meals in containrers, and food bowls on the table"
+            />
+          </div>
         </div>
-        <div class="hero-section-img">
-          <img
-            class="hero-section-img"
-            src="img/hero.png"
-            alt="Girl eating healthy, tasty looking food, meals in containrers, and food bowls on the table"
-          />
-        </div>
-      </div>
-    </section>
+      </section>
+    </main>
   </body>
 </html>
