--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
           </div>
         </div>
       </section>
+      <section class="section-how">
+        <div class="container grid grid--3-cols">
+          <div>Test1</div>
+          <div>Test2</div>
+          <div>Test3</div>
+          <div>Test4</div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
