Featured in section, Z-pattern image background

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Rubik:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/style.css" />
     <title>OmniFood</title>
   </head>
@@ -68,6 +69,18 @@
           </div>
         </div>
       </section>
+      <section class="section-featured">
+        <div class="container">
+          <h2 class="header-featured-in">Is featured in</h2>
+          <div class="logos">
+            <img src="img/logos/business-insider.png" alt="Business insider logo">
+            <img src="img/logos/forbes.png" alt="Forbes logo">
+            <img src="img/logos/techcrunch.png" alt="Tech crunch logo">
+            <img src="img/logos/the-new-york-times.png" alt="Thew New York times">
+            <img src="img/logos/usa-today.png" alt="USA today logo">
+          </div>
+        </div>
+      </section>
       <section class="section-how">
         <div class="container">
           <span class="subheading">How it works</span>
@@ -76,7 +89,7 @@
           </h2>
         </div>
         <div class="container">
-          <div class="grid grid--2-cols">
+          <div class="grid grid--center grid--2-cols">
             <div class="step-text-box">
               <p class="step-number">01</p>
               <h3 class="heading-tertiary">
