--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Rubik:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <title>OmniFood</title>
   </head>
   <body>
@@ -71,13 +79,19 @@
       </section>
       <section class="section-featured">
         <div class="container">
-          <h2 class="header-featured-in">Is featured in</h2>
+          <h2 class="header-featured-in">Featured in</h2>
           <div class="logos">
-            <img src="img/logos/business-insider.png" alt="Business insider logo">
-            <img src="img/logos/forbes.png" alt="Forbes logo">
-            <img src="img/logos/techcrunch.png" alt="Tech crunch logo">
-            <img src="img/logos/the-new-york-times.png" alt="Thew New York times">
-            <img src="img/logos/usa-today.png" alt="USA today logo">
+            <img
+              src="img/logos/business-insider.png"
+              alt="Business insider logo"
+            />
+            <img src="img/logos/forbes.png" alt="Forbes logo" />
+            <img src="img/logos/techcrunch.png" alt="Tech crunch logo" />
+            <img
+              src="img/logos/the-new-york-times.png"
+              alt="Thew New York times"
+            />
+            <img src="img/logos/usa-today.png" alt="USA today logo" />
           </div>
         </div>
       </section>
@@ -110,7 +124,11 @@
               />
             </div>
             <div class="step-img-box">
-              <img src="img/app/app-screen-2.png" alt="iPhone app allowing to pick meals for each day of the week" class="step-img" />
+              <img
+                src="img/app/app-screen-2.png"
+                alt="iPhone app allowing to pick meals for each day of the week"
+                class="step-img"
+              />
             </div>
             <div class="step-text-box">
               <p class="step-number">02</p>
@@ -131,8 +149,49 @@
               </p>
             </div>
             <div class="step-img-box">
-              <img src="img/app/app-screen-3.png" alt="iPhone app showing a notification of food being prepared" class="step-img" />
+              <img
+                src="img/app/app-screen-3.png"
+                alt="iPhone app showing a notification of food being prepared"
+                class="step-img"
+              />
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="meals-row">
+        <div class="container">
+          <span class="subheading">Meals</span>
+          <h2 class="heading-secondary">
+            Omnifood AI chooses from 5,000+ recipes
+          </h2>
+        </div>
+        <div class="container">
+          <div class="grid grid--3-cols">
+            <div class="meal">
+              <img
+                src="img/meals/meal-1.jpg"
+                alt="Japanese Gyozas"
+                class="meal-img"
+              />
+              <span class="tag">Vegetarian</span>
+              <p class="meal-title">Japanese Gyozas</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">
+                  <ion-icon name="flame-outline"></ion-icon>
+                  <span>650 calories</span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon name="restaurant-outline"></ion-icon>
+                  <span>NutriScore &reg 74</span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon name="star-outline"></ion-icon>
+                  <span>4.9 rating (537)</span>
+                </li>
+              </ul>
+            </div>
+            <div class="meal"></div>
+            <div class="list"></div>
           </div>
         </div>
       </section>
