--- a/index.html
+++ b/index.html
@@ -173,27 +173,61 @@
                 alt="Japanese Gyozas"
                 class="meal-img"
               />
-              <div class="meal-tags">
-
-                <span class="tag">Vegetarian</span>
+              <div class="meal-content">
+                <div class="meal-tags">
+                  <span class="tag tag--vegetarian">Vegetarian</span>
+                </div>
+                <p class="meal-title">Japanese Gyozas</p>
+                <ul class="meal-attributes">
+                  <li class="meal-attribute">
+                    <ion-icon name="flame-outline" class="meal-icon"></ion-icon>
+                    <span><strong>650</strong> calories</span>
+                  </li>
+                  <li class="meal-attribute">
+                    <ion-icon
+                      name="restaurant-outline"
+                      class="meal-icon"
+                    ></ion-icon>
+                    <span>NutriScore &reg <strong>74</strong></span>
+                  </li>
+                  <li class="meal-attribute">
+                    <ion-icon name="star-outline" class="meal-icon"></ion-icon>
+                    <span><strong>4.9</strong> rating (537)</span>
+                  </li>
+                </ul>
               </div>
-              <p class="meal-title">Japanese Gyozas</p>
-              <ul class="meal-attributes">
-                <li class="meal-attribute">
-                  <ion-icon name="flame-outline" class="meal-icon"></ion-icon>
-                  <span><strong>650</strong> calories</span>
-                </li>
-                <li class="meal-attribute">
-                  <ion-icon name="restaurant-outline" class="meal-icon"></ion-icon>
-                  <span>NutriScore &reg <strong>74</strong></span>
-                </li>
-                <li class="meal-attribute">
-                  <ion-icon name="star-outline" class="meal-icon"></ion-icon>
-                  <span><strong>4.9</strong> rating (537)</span>
-                </li>
-              </ul>
             </div>
-            <div class="meal"></div>
+            <div class="meal">
+              <img
+                src="img/meals/meal-2.jpg"
+                alt="Japanese Gyozas"
+                class="meal-img"
+              />
+              <div class="meal-content">
+                <div class="meal-tags">
+                  <span class="tag tag--vegan">Vegan</span>
+                  <span class="tag tag--paleo">Paleo</span>
+                </div>
+                <p class="meal-title">Avocado Salad</p>
+                <ul class="meal-attributes">
+                  <li class="meal-attribute">
+                    <ion-icon name="flame-outline" class="meal-icon"></ion-icon>
+                    <span><strong>400</strong> calories</span>
+                  </li>
+                  <li class="meal-attribute">
+                    <ion-icon
+                      name="restaurant-outline"
+                      class="meal-icon"
+                    ></ion-icon>
+                    <span>NutriScore &reg <strong>92</strong></span>
+                  </li>
+                  <li class="meal-attribute">
+                    <ion-icon name="star-outline" class="meal-icon"></ion-icon>
+                    <span><strong>4.8</strong> rating (441)</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
             <div class="list"></div>
           </div>
         </div>
