--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <title>OmniFood</title>
+    <title>Omnifood</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.png">
   </head>
   <body>
     <header class="main-header">
