--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
     <title>Omnifood</title>
-    <link rel="icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="img/favicon.png" />
   </head>
   <body>
     <header class="main-header">
@@ -229,7 +229,43 @@
                 </ul>
               </div>
             </div>
-            <div class="list"></div>
+            <div class="diets">
+              <h3 class="heading-tertiary">Works with any diet</h3>
+              <ul class="list">
+                <li class="list-item">
+                  <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                  <span>Vegetarian</span>
+                </li>
+                <li class="list-item">
+                  <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                  <span>Vegan</span>
+                </li>
+                <li class="list-item">
+                  <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                  <span>Pescatarian</span>
+                </li>
+                <li class="list-item">
+                  <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                  <span>Gluten-free</span>
+                </li>
+                <li class="list-item">
+                  <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                  <span>Keto</span>
+                </li>
+                <li class="list-item">
+                  <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                  <span>Paleo</span>
+                </li>
+                <li class="list-item">
+                  <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                  <span>Low FODMAP</span>
+                </li>
+                <li class="list-item">
+                  <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                  <span>Kid-friendly</span>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
