--- a/index.html
+++ b/index.html
@@ -441,13 +441,13 @@
         </div>
       </section>
       <section class="pricing-section">
-        <div class="container">
+        <div class="container center-text">
           <span class="subheading">Pricing</span>
           <h2 class="heading-secondary">Eat well without breaking the bank</h2>
           <div class="testimonials">
         </div>
-        <div class="container grid grid--2-cols">
-          <div class="pricing-plan">
+        <div class="container grid grid--2-cols margin-bottom-lrg">
+          <div class="pricing-plan pricing-plan--starter">
             <header class="plan-header">
               <p class="plan-name">Starter</p>
               <p class="plan-price"><span>$</span>399</p>
@@ -466,7 +466,7 @@
                 class="list-icon"
                 name="checkmark-outline"
               ></ion-icon>
-                <span>Order times are between 11am and 9pm</span>
+                <span>Order from 11am to 9pm</span>
               </li>
               <li class="list-item">
                 <ion-icon
@@ -475,12 +475,15 @@
               ></ion-icon>
                 <span>Delivery is free</span>
               </li>
+              <li class="list-item">
+                <ion-icon name="close-outline" class="list-icon"></ion-icon>
+              </li>
             </ul>
             <div class="plan-sign-up">
               <a href="#" class="btn btn-primary">Start eating well</a>
             </div>  
           </div>
-          <div class="pricing-plan">
+          <div class="pricing-plan pricing-plan--complete">
             <header class="plan-header">
               <p class="plan-name">Complete</p>
               <p class="plan-price"><span>$</span>649</p>
@@ -492,14 +495,14 @@
                 class="list-icon"
                 name="checkmark-outline"
               ></ion-icon>
-                <span>2 meals per day</span>
+                <span><strong>2 meals</strong> per day</span>
               </li>
               <li class="list-item">
                 <ion-icon
                 class="list-icon"
                 name="checkmark-outline"
               ></ion-icon>
-                <span>Order 24/7</span>
+                <span>Order <strong>24/7</strong></span>
               </li>
               <li class="list-item">
                 <ion-icon
@@ -520,6 +523,12 @@
               <a href="#" class="btn btn-primary">Start eating well</a>
             </div>
           </div>
+        </div>
+        <div class="container grid grid--4-cols">
+          <div class="feature">feat 1</div>
+          <div class="feature">feat 2</div>
+          <div class="feature">feat 3</div>
+          <div class="feature">feat 4</div>
         </div>
       </section>
     </main>
