--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         <div class="container center-text">
           <span class="subheading">Pricing</span>
           <h2 class="heading-secondary">Eat well without breaking the bank</h2>
-          <div class="testimonials">
+          <!-- <div class="testimonials"> -->
         </div>
         <div class="container grid grid--2-cols margin-bottom-md">
           <div class="pricing-plan pricing-plan--starter">
@@ -455,24 +455,15 @@
             </header>
             <ul class="list">
               <li class="list-item">
-                <ion-icon
-                class="list-icon"
-                name="checkmark-outline"
-              ></ion-icon>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span>1 meal per day</span>
               </li>
               <li class="list-item">
-                <ion-icon
-                class="list-icon"
-                name="checkmark-outline"
-              ></ion-icon>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span>Order from 11am to 9pm</span>
               </li>
               <li class="list-item">
-                <ion-icon
-                class="list-icon"
-                name="checkmark-outline"
-              ></ion-icon>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span>Delivery is free</span>
               </li>
               <li class="list-item">
@@ -481,7 +472,7 @@
             </ul>
             <div class="plan-sign-up">
               <a href="#" class="btn btn-primary">Start eating well</a>
-            </div>  
+            </div>
           </div>
           <div class="pricing-plan pricing-plan--complete">
             <header class="plan-header">
@@ -491,31 +482,19 @@
             </header>
             <ul class="list">
               <li class="list-item">
-                <ion-icon
-                class="list-icon"
-                name="checkmark-outline"
-              ></ion-icon>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span><strong>2 meals</strong> per day</span>
               </li>
               <li class="list-item">
-                <ion-icon
-                class="list-icon"
-                name="checkmark-outline"
-              ></ion-icon>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span>Order <strong>24/7</strong></span>
               </li>
               <li class="list-item">
-                <ion-icon
-                class="list-icon"
-                name="checkmark-outline"
-              ></ion-icon>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span>Delivery is free</span>
               </li>
               <li class="list-item">
-                <ion-icon
-                class="list-icon"
-                name="checkmark-outline"
-              ></ion-icon>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span>Get access to latest recipes</span>
               </li>
             </ul>
@@ -525,28 +504,62 @@
           </div>
         </div>
         <div class="container margin-bottom-lrg">
-          <aside class="plan-details">Prices include all applicable taxes. You can cancel at any time. Both plans include the following:</aside>
+          <aside class="plan-details">
+            Prices include all applicable taxes. You can cancel at any time.
+            Both plans include the following:
+          </aside>
         </div>
         <div class="container grid grid--4-cols">
           <div class="feature">
             <ion-icon name="infinite-outline" class="feature-icon"></ion-icon>
             <p class="feature-title">Never cook again!</p>
-            <p class="feature-text">Our subscriptions cover 365 days per year, even including major holidays.</p>
+            <p class="feature-text">
+              Our subscriptions cover 365 days per year, even including major
+              holidays.
+            </p>
           </div>
           <div class="feature">
             <ion-icon name="nutrition-outline" class="feature-icon"></ion-icon>
             <p class="feature-title">Local and organic</p>
-            <p class="feature-text">Our cooks only use local, fresh, and organic products to prepare your meals.</p>
+            <p class="feature-text">
+              Our cooks only use local, fresh, and organic products to prepare
+              your meals.
+            </p>
           </div>
           <div class="feature">
             <ion-icon name="leaf-outline" class="feature-icon"></ion-icon>
             <p class="feature-title">No waste</p>
-            <p class="feature-text">All our partners only use reusable containers to package all your meals.</p>
+            <p class="feature-text">
+              All our partners only use reusable containers to package all your
+              meals.
+            </p>
           </div>
           <div class="feature">
             <ion-icon name="pause-outline" class="feature-icon"></ion-icon>
             <p class="feature-title">Pause anytime</p>
-            <p class="feature-text">Going on vacation? Just pause your subscription, and we refund unused days.</p>
+            <p class="feature-text">
+              Going on vacation? Just pause your subscription, and we refund
+              unused days.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="cta-section">
+        <div class="container">
+          <div class="cta">
+            <div class="cta-form">
+              <span class="subheading">Sign up now!</span>
+              <h2 class="heading-secondary">We offer a free sample meal</h2>
+            </div>
+            <!-- role="img" aria-label=""" -->
+            <!-- Adds explanation of content for screen readers -->
+            <!-- Role shows that this container is an image -->
+            <!-- aria-label is for screen readers -->
+            <div
+              class="cta-support-img"
+              role="img"
+              aria-label="Woman enjoying tasty food"
+            ></div>
           </div>
         </div>
       </section>
