Form style, focus states

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                   </select>
                 </div>
                 <!-- input with type submit can be used, however button element will submit the form aswell -->
-                <button class="btn">Sign up now</button>
+                <button class="btn btn--form">Sign up now</button>
               </form>
             </div>
             <!-- role="img" aria-label=""" -->
