--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
   </head>
   <body>
     <header class="main-header">
-      <img
-        src="img/omnifood-logo.png"
-        alt="OmniFood logo"
-        class="header-logo"
-      />
+      <a href="#">
+        <img
+          src="img/omnifood-logo.png"
+          alt="OmniFood logo"
+          class="header-logo"
+        />
+      </a>
       <nav class="main-header-nav">
         <ul class="main-nav-list">
           <li><a href="#" class="main-nav-link">Section 1</a></li>
@@ -602,5 +604,22 @@
         </div>
       </section>
     </main>
+    <footer class="main-footer">
+      <div class="container grid grid--5-cols">
+        <div class="logo-col">
+          <a href="#" class="footer-logo">
+            <img
+              src="img/omnifood-logo.png"
+              alt="OmniFood logo"
+              class="header-logo"
+            />
+          </a>
+        </div>
+        <div class="address-col">address</div>
+        <nav class="nav-col">nav 1</nav>
+        <nav class="nav-col">nav 2</nav>
+        <nav class="nav-col">nav 3</nav>
+      </div>
+    </footer>
   </body>
 </html>
