--- a/index.html
+++ b/index.html
@@ -614,6 +614,11 @@
               class="header-logo"
             />
           </a>
+          <ul class="social-links">
+            <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+          </ul>
           <p class="copyright">
             Copyright &copy; 2024 by Omnifood, Inc. All rights reserved.
           </p>
