Media querie for phones/small tablets

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               </p>
             </div>
           </div>
-          <div class="hero-section-img">
+          <div class="hero-img-box">
             <img
               class="hero-section-img"
               src="img/hero.png"
