--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="icon" type="image/x-icon" href="img/favicon.png" />
   </head>
   <body>
-    <header class="main-header nav-open">
+    <header class="main-header">
       <a href="#">
         <img
           src="img/omnifood-logo.png"
@@ -612,7 +612,7 @@
       </section>
     </main>
     <footer class="main-footer">
-      <div class="container gird--footer grid--5-cols">
+      <div class="container gird--footer">
         <div class="logo-col">
           <a href="#" class="footer-logo">
             <img
@@ -657,7 +657,7 @@
             </p>
           </address>
         </div>
-        <nav class="nav-col">
+        <div class="nav-col">
           <p class="footer-heading">Account</p>
           <ul class="footer-nav">
             <li><a class="footer-link" href="#">Create account</a></li>
@@ -665,8 +665,8 @@
             <li><a class="footer-link" href="#">iOS app</a></li>
             <li><a class="footer-link" href="#">Android app</a></li>
           </ul>
-        </nav>
-        <nav class="nav-col">
+        </div>
+        <div class="nav-col">
           <p class="footer-heading">Company</p>
           <ul class="footer-nav">
             <li><a class="footer-link" href="#">About Omnifood</a></li>
@@ -674,15 +674,15 @@
             <li><a class="footer-link" href="#">Cooking partners</a></li>
             <li><a class="footer-link" href="#">Careers</a></li>
           </ul>
-        </nav>
-        <nav class="nav-col">
+        </div>
+        <div class="nav-col">
           <p class="footer-heading">Resources</p>
           <ul class="footer-nav">
             <li><a class="footer-link" href="#">Recipe directory</a></li>
             <li><a class="footer-link" href="#">Help center</a></li>
             <li><a class="footer-link" href="#">Privacy & terms</a></li>
           </ul>
-        </nav>
+        </div>
       </div>
     </footer>
   </body>
