Get current year for copyright using JS

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script defer src="js/script.js"></script>
     <title>Omnifood</title>
     <link rel="icon" type="image/x-icon" href="img/favicon.png" />
   </head>
@@ -639,7 +640,7 @@
             </li>
           </ul>
           <p class="copyright">
-            Copyright &copy; 2024 by Omnifood, Inc. All rights reserved.
+            Copyright &copy; <span class="year">2027</span> by Omnifood, Inc. All rights reserved.
           </p>
         </div>
         <div class="address-col">
