--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script
+      defer
+      src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
+    ></script>
     <script defer src="js/script.js"></script>
     <title>Omnifood</title>
     <link rel="icon" type="image/x-icon" href="img/favicon.png" />
@@ -37,11 +41,13 @@
       </a>
       <nav class="main-header-nav">
         <ul class="main-nav-list">
-          <li><a href="#" class="main-nav-link">How it works</a></li>
-          <li><a href="#" class="main-nav-link">Meals</a></li>
-          <li><a href="#" class="main-nav-link">Testimonials</a></li>
-          <li><a href="#" class="main-nav-link">Pricing</a></li>
-          <li><a href="#" class="main-nav-link nav-cta">Try for free</a></li>
+          <li><a href="#how" class="main-nav-link">How it works</a></li>
+          <li><a href="#meals" class="main-nav-link">Meals</a></li>
+          <li>
+            <a href="#testimonials" class="main-nav-link">Testimonials</a>
+          </li>
+          <li><a href="#price" class="main-nav-link">Pricing</a></li>
+          <li><a href="#cta" class="main-nav-link nav-cta">Try for free</a></li>
         </ul>
       </nav>
       <button class="btn-mobile-nav">
@@ -61,10 +67,10 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs. We have delivered 250,000+ meals last year!
             </p>
-            <a href="#" class="btn btn-primary margin-right-sm"
+            <a href="#cta" class="btn btn-primary margin-right-sm"
               >Start eating well</a
             >
-            <a href="#" class="btn btn-secondary">Learn more &darr;</a>
+            <a href="#how" class="btn btn-secondary">Learn more &darr;</a>
             <div class="delivered-meals">
               <div class="delivered-img">
                 <img src="img/customers/customer-1.jpg" alt="Customer photo" />
@@ -106,7 +112,7 @@
           </div>
         </div>
       </section>
-      <section class="section-how">
+      <section class="section-how" id="how">
         <div class="container center-text">
           <span class="subheading">How it works</span>
           <h2 class="heading-secondary">
@@ -169,7 +175,7 @@
           </div>
         </div>
       </section>
-      <section class="meals-row">
+      <section class="meals-row" id="meals">
         <div class="container center-text">
           <span class="subheading">Meals</span>
           <h2 class="heading-secondary">
@@ -306,7 +312,7 @@
           <a href="#" class="link">See all recipes &rarr;</a>
         </div>
       </section>
-      <section class="testimonials-section">
+      <section class="testimonials-section" id="testimonials">
         <div class="testimonials-container">
           <span class="subheading">Testimonials</span>
           <h2 class="heading-secondary">Once you try it, you can't go back</h2>
@@ -450,7 +456,7 @@
           </figure>
         </div>
       </section>
-      <section class="pricing-section">
+      <section class="pricing-section" id="price">
         <div class="container center-text">
           <span class="subheading">Pricing</span>
           <h2 class="heading-secondary">Eat well without breaking the bank</h2>
@@ -554,7 +560,7 @@
           </div>
         </div>
       </section>
-      <section class="cta-section">
+      <section class="cta-section" id="cta">
         <div class="container">
           <div class="cta">
             <div class="cta-form-container">
@@ -640,7 +646,8 @@
             </li>
           </ul>
           <p class="copyright">
-            Copyright &copy; <span class="year">2027</span> by Omnifood, Inc. All rights reserved.
+            Copyright &copy; <span class="year">2027</span> by Omnifood, Inc.
+            All rights reserved.
           </p>
         </div>
         <div class="address-col">
